; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_udis86.c_ud_disassemble.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_udis86.c_ud_disassemble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ud = type { i8*, i32 (%struct.ud*)*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ud_disassemble(%struct.ud* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ud*, align 8
  %4 = alloca i32, align 4
  store %struct.ud* %0, %struct.ud** %3, align 8
  %5 = load %struct.ud*, %struct.ud** %3, align 8
  %6 = getelementptr inbounds %struct.ud, %struct.ud* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

10:                                               ; preds = %1
  %11 = load %struct.ud*, %struct.ud** %3, align 8
  %12 = call i32 @ud_decode(%struct.ud* %11)
  store i32 %12, i32* %4, align 4
  %13 = icmp sgt i32 %12, 0
  br i1 %13, label %14, label %30

14:                                               ; preds = %10
  %15 = load %struct.ud*, %struct.ud** %3, align 8
  %16 = getelementptr inbounds %struct.ud, %struct.ud* %15, i32 0, i32 1
  %17 = load i32 (%struct.ud*)*, i32 (%struct.ud*)** %16, align 8
  %18 = icmp ne i32 (%struct.ud*)* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %14
  %20 = load %struct.ud*, %struct.ud** %3, align 8
  %21 = getelementptr inbounds %struct.ud, %struct.ud* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  store i8 0, i8* %23, align 1
  %24 = load %struct.ud*, %struct.ud** %3, align 8
  %25 = getelementptr inbounds %struct.ud, %struct.ud* %24, i32 0, i32 1
  %26 = load i32 (%struct.ud*)*, i32 (%struct.ud*)** %25, align 8
  %27 = load %struct.ud*, %struct.ud** %3, align 8
  %28 = call i32 %26(%struct.ud* %27)
  br label %29

29:                                               ; preds = %19, %14
  br label %30

30:                                               ; preds = %29, %10
  %31 = load i32, i32* %4, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %9
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @ud_decode(%struct.ud*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
